--- a/app/views/home/template6.html.erb
+++ b/app/views/home/template6.html.erb
@@ -2,7 +2,9 @@
 
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
     <div class="mdl-layout__header-row site-logo-row"><span class="mdl-layout__title">
-            <div class="site-logo"></div>
+            <div class="site-logo">
+              <%= image_tag('site-logo.png') %>
+            </div>
           <span class="site-description">Shall we go?</span></span></div>
     <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
       <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -15,7 +17,21 @@
         <a class="mdl-navigation__link" href="/home/template7">Message</a>
       </nav>
     </div>
+
   </header>
+
+  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+    <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+      <a class="mdl-navigation__link" href="/home/template1">Home</a>
+      <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+      <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+      <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
+      <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+      <a class="mdl-navigation__link" href="/home/template5">My account</a>
+      <a class="mdl-navigation__link" href="/home/template6">Support</a>
+      <a class="mdl-navigation__link" href="/home/template7">Message</a>
+    </nav>
+  </div>
 
   <main class="mdl-layout__content">
     <div class="site-content">
@@ -56,11 +72,21 @@
       </div>
     </div>
   </main>
+
 </div>
 
 <style>
   .page-content {
     padding-bottom: 0;
   }
+  .site-navigation-row .mdl-navigation {
 
+    background-color: rgba(0,0,0,0);
+  }
 </style>
+
+<script>
+    $(document).ready(function(){
+        $('.slider').slider();
+    });
+</script>
