--- a/app/views/home/template1.html.erb
+++ b/app/views/home/template1.html.erb
@@ -4,12 +4,12 @@
   </a>
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
     <div class="mdl-layout__header-row site-logo-row">
-      <span class="mdl-layout__title">
+            <span class="mdl-layout__title">
             <div class="site-logo">
-              <%= image_tag('site-logo.png') %>
+               <%= image_tag('site-logo.png') %>
             </div>
-          <span class="site-description">Shall we go?</span>
-      </span>
+            <span class="site-description">Shall we go?</span>
+            </span>
     </div>
     <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
       <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -25,10 +25,14 @@
   </header>
   <div class="mdl-layout__drawer mdl-layout--small-screen-only">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-      <a class="mdl-navigation__link" href="index.html">Home</a>
-      <a class="mdl-navigation__link" href="portfolio.html">Portfolio</a>
-      <a class="mdl-navigation__link" href="about.html">About</a>
-      <a class="mdl-navigation__link" href="contact.html">Contact</a>
+      <a class="mdl-navigation__link" href="/home/template1">Home</a>
+      <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+      <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+      <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
+      <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+      <a class="mdl-navigation__link" href="/home/template5">My account</a>
+      <a class="mdl-navigation__link" href="/home/template6">Support</a>
+      <a class="mdl-navigation__link" href="/home/template7">Message</a>
     </nav>
   </div>
 
@@ -308,8 +312,10 @@
   .mdl-card {
     height: 400px;
   }
-  .headera{
 
+  .site-navigation-row .mdl-navigation {
+
+    background-color: rgba(0,0,0,0);
   }
 </style>
 
