--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,29 +2,35 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Material Portfolio Template Demo</title>
-  <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com."/>
+  <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+  <!--<title>Material Portfolio Template Demo</title>-->
+  <!--<meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com."/>-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" rel="stylesheet">
   <link href="styles/main.css" rel="stylesheet">
+
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application' %>
+
   <%= csrf_meta_tags %>
 
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
-  <%= stylesheet_link_tag    'application', media: 'all'%>
-  <%= javascript_include_tag 'application' %>
 
 </head>
 
-<body>
+<body id="top">
+
+
 
 <%= yield %>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
+
 </body>
 </html>
 
@@ -53,4 +59,9 @@
     font-weight: 400;
     margin-bottom: 10px;
   }
+  .site-navigation-row .mdl-navigation__link {
+
+    line-height: 140%;
+  }
+
 </style>
