Total home design completed

--- a/app/views/home/template2.html.erb
+++ b/app/views/home/template2.html.erb
@@ -12,8 +12,8 @@
       <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
         <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
         <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
-        <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
-        <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+        <a class="mdl-navigation__link" href="/home/template3">Pending <br> hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template4">Create <br> a hang-out</a>
         <a class="mdl-navigation__link" href="/home/template5">My account</a>
         <a class="mdl-navigation__link" href="/home/template6">Support</a>
         <a class="mdl-navigation__link" href="/home/template7">Message</a>
