--- a/app/views/home/template1.html.erb
+++ b/app/views/home/template1.html.erb
@@ -1,22 +1,35 @@
+
+
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp">
     <i class="material-icons">mail</i>
   </a>
+
+
+
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+
+
     <div class="mdl-layout__header-row site-logo-row">
+
             <span class="mdl-layout__title">
+
             <div class="site-logo">
                <%= image_tag('site-logo.png') %>
             </div>
+
             <span class="site-description">Shall we go?</span>
+
             </span>
     </div>
+
+
     <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
       <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
         <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
         <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
-        <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
-        <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+        <a class="mdl-navigation__link" href="/home/template3">Pending <br> hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template4">Create <br> a hang-out</a>
         <a class="mdl-navigation__link" href="/home/template5">My account</a>
         <a class="mdl-navigation__link" href="/home/template6">Support</a>
         <a class="mdl-navigation__link" href="/home/template7">Message</a>
@@ -40,28 +53,28 @@
     <div class="site-content">
       <div class="container">
         <div class="mdl-grid site-max-width">
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card" >
             <div class="slider">
               <ul class="slides">
-                <li>
-                  <%= image_tag('portfolio9.jpg') %>
-                </li>
                 <li>
                   <%= image_tag('portfolio1.jpg') %>
                 </li>
                 <li>
                   <%= image_tag('portfolio2.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
+                <li>
+                  <%= image_tag('portfolio3.jpg') %>
                 </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -69,24 +82,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio3.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('portfolio4.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('portfolio5.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -94,24 +107,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio5.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('portfolio6.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('portfolio7.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -119,24 +132,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
+                  <%= image_tag('portfolio7.jpg') %>
+                </li>
+                <li>
+                  <%= image_tag('portfolio8.jpg') %>
+                </li>
+                <li>
                   <%= image_tag('portfolio9.jpg') %>
                 </li>
-                <li>
-                  <%= image_tag('portfolio1.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio2.jpg') %>
-                </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -144,24 +157,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio8.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('portfolio6.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('portfolio4.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -169,24 +182,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio5.jpg') %>
+                </li>
+                <li>
+                  <%= image_tag('portfolio3.jpg') %>
                 </li>
                 <li>
                   <%= image_tag('portfolio1.jpg') %>
                 </li>
-                <li>
-                  <%= image_tag('portfolio2.jpg') %>
-                </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -194,24 +207,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio4.jpg') %>
                 </li>
                 <li>
                   <%= image_tag('portfolio1.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('portfolio7.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -219,24 +232,24 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio8.jpg') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('portfolio4.jpg') %>
                 </li>
                 <li>
                   <%= image_tag('portfolio2.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
@@ -244,7 +257,7 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('portfolio3.jpg') %>
                 </li>
                 <li>
                   <%= image_tag('portfolio1.jpg') %>
@@ -252,16 +265,16 @@
                 <li>
                   <%= image_tag('portfolio2.jpg') %>
                 </li>
-                <li><div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">City Scape</h2>
-                </div>
-                  <div class="mdl-card__supporting-text">
-                    Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
-                  </div><br>
-                  <div class="mdl-card__actions mdl-card--border">
-                    <%= link_to "Learn More", controller: "home", action: "template2" %>
-                  </div>
-                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
               </ul>
             </div>
           </div>
