--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
 
 <style>
   .site-navigation-row {
-    background-color: rgba(0, 0, 0, 0.08);
+    background-color: white;
     text-transform: uppercase;
     height: 70px;
   }
@@ -44,9 +44,10 @@
     -ms-flex: 1;
     flex: 1;
     line-height: 100%;
+    color: #0150BF;
   }
   .mdl-layout__header--waterfall {
-    background-color: midnightblue;
+    background-color: white;
   }
   nav {
     color: #fff;
@@ -54,14 +55,65 @@
   }
   .site-description {
     display: block;
-    font-size: 40px;
+    font-size: 30px;
     text-align: center;
-    font-weight: 400;
-    margin-bottom: 10px;
+    font-weight: 600;
+    padding-bottom: 30px;
+    /*text-shadow: 2px 2px (0,0,0,0.6);*/
   }
   .site-navigation-row .mdl-navigation__link {
 
     line-height: 140%;
   }
 
+  .site-navigation-row .mdl-navigation__link {
+
+    color: #0150BF;
+  }
+
+  .mdl-layout__header {
+
+    background-color: none;
+    color: #0153B9;
+
+
+  }
+  .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
+    -webkit-box-shadow: none;
+    /* box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2); */
+  }
+
+  .slider .indicators .indicator-item {
+    background-color: #0150BF;
+    border: 2px solid #ffffff;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+  .mdl-layout__header .mdl-layout__drawer-button {
+    color: #0150BF;
+  }
+  .site-logo {
+
+    margin-top: 30px;
+  }
+
+  .mdl-layout__content {
+    background-color: #ffffff;
+  }
+
+  .mdl-navigation__link {
+
+    font-weight: 700;
+
+  }
+  .site-navigation-row .mdl-navigation {
+
+    max-width: 1200px;
+
+  }
+  .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+
+    color: #0150BF;
+  }
 </style>
