--- a/app/views/home/template3.html.erb
+++ b/app/views/home/template3.html.erb
@@ -1,4 +1,4 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2"><i class="material-icons">mail</i></a>
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
     <div class="mdl-layout__header-row site-logo-row">
             <span class="mdl-layout__title">
@@ -20,7 +20,7 @@
       </nav>
     </div>
   </header>
-  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+  <div class="mdl-layout__drawer ">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
       <a class="mdl-navigation__link" href="/home/template1">Home</a>
       <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -40,16 +40,16 @@
           <div class="slider">
             <ul class="slides">
               <li>
-                <%= image_tag('614678.jpg') %>
+                <%= image_tag('#') %>
               </li>
               <li>
-                <%= image_tag('portfolio2.jpg') %>
+                <%= image_tag('#') %>
               </li>
               <li>
-                <%= image_tag('portfolio3.jpg') %>
+                <%= image_tag('#') %>
               </li>
               <li>
-                <%= image_tag('portfolio4.jpg') %>
+                <%= image_tag('#') %>
               </li>
             </ul>
           </div>
@@ -67,19 +67,19 @@
           <h2 class="mdl-card__title-text">Welcome</h2>
         </div>
         <div class="mdl-card__supporting-text">
-          <p>지도 설명</p>
+          <p>지도 요약</p>
         </div>
       </div>
 
       <div class="site-max-button">
-        <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#">Join</a>
+        <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent blue lighten-2" href="#">Join</a>
       </div>
     </div>
 
-    <footer class="mdl-mini-footer">
-      <div class="footer-container">
-        <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        <ul class="mdl-mini-footer__link-list">
+    <footer class="mdl-mini-footer blue-text text-darken-2 white">
+      <div class="footer-container blue-text text-darken-2">
+        <div class="mdl-logo blue-text text-darken-2">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank" class="blue-text text-darken-2">TemplateFlip</a></div>
+        <ul class="mdl-mini-footer__link-list blue-text text-darken-2">
           <li><a href="#">Privacy & Terms</a></li>
         </ul>
       </div>
@@ -124,6 +124,9 @@
   .site-navigation-row .mdl-navigation {
 
     background-color: rgba(0,0,0,0);
+  }
+  .event-card {
+    background: white;
   }
 
 </style>
