--- a/app/views/home/template6.html.erb
+++ b/app/views/home/template6.html.erb
@@ -1,14 +1,27 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2">
+    <i class="material-icons">mail</i>
+  </a>
+
+
 
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+
+
     <div class="mdl-layout__header-row site-logo-row">
+
             <span class="mdl-layout__title">
+
             <div class="site-logo">
                <%= image_tag('site-logo.png') %>
             </div>
+
             <span class="site-description">Shall we go?</span>
+
             </span>
     </div>
+
+
     <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
       <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
         <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -21,7 +34,7 @@
       </nav>
     </div>
   </header>
-  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+  <div class="mdl-layout__drawer">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
       <a class="mdl-navigation__link" href="/home/template1">Home</a>
       <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -36,42 +49,95 @@
 
   <main class="mdl-layout__content">
     <div class="site-content">
-      <div class="mdl-grid site-max-width">
-        <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp page-content">
-          <div class="collection">
-            <a href="#!" class="collection-item">Alvin</a>
-            <a href="#!" class="collection-item active">Alvin</a>
-            <a href="#!" class="collection-item">Alvin</a>
-            <a href="#!" class="collection-item">Alvin</a>
-          </div>
+      <div class="container">
+
+          <ul class="collapsible" data-collapsible="accordion">
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 마테리얼라이즈 누가 쉽다 했나</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 사실 쉽긴 함 내가 멍청해서 그렇지</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header"> Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+            <li>
+              <div class="collapsible-header">Q&A</div>
+              <div class="collapsible-body"><span> 시방 할 게 너무 많아요.</span></div>
+            </li>
+          </ul>
+
         </div>
-        <!--<div class="mdl-grid site-copy">-->
-          <!--<div class="mdl-cell mdl-cell&#45;&#45;12-col"><div class="mdl-card__supporting-text">-->
-            <!--<p>Contact our team using the contact form below:</p>-->
-            <!--<form action="https://formspree.io/email@example.com" method="POST" class="form-contact">-->
-              <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label">-->
-                <!--<input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*" type="text" id="Name" name="name">-->
-                <!--<label class="mdl-textfield__label" for="Name">Name...</label>-->
-                <!--<span class="mdl-textfield__error">Letters and spaces only</span>-->
-              <!--</div>-->
-              <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label">-->
-                <!--<input class="mdl-textfield__input" type="text" id="Email" name="_replyto">-->
-                <!--<label class="mdl-textfield__label" for="Email">Email...</label>-->
-              <!--</div>-->
-              <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label">-->
-                <!--<textarea class="mdl-textfield__input" type="text" rows="5" id="note" name="message"></textarea>-->
-                <!--<label class="mdl-textfield__label" for="note">Enter note</label>-->
-              <!--</div>-->
-              <!--<p>-->
-                <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect mdl-button&#45;&#45;accent" type="submit">-->
-                  <!--Submit-->
-                <!--</button>-->
-              <!--</p>-->
-            <!--</form>-->
-          <!--</div></div>-->
-        <!--</div>-->
-      </div>
+        <ul class="pagination center-align">
+          <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+          <li class="active blue-text text-darken-2 blue lighten-1"><a href="#!">1</a></li>
+          <li class="waves-effect"><a href="#!">2</a></li>
+          <li class="waves-effect"><a href="#!">3</a></li>
+          <li class="waves-effect"><a href="#!">4</a></li>
+          <li class="waves-effect"><a href="#!">5</a></li>
+          <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+        </ul>
+
     </div>
+    <footer class="mdl-mini-footer blue-text text-darken-2 white">
+      <div class="footer-container blue-text text-darken-2">
+        <div class="mdl-logo blue-text text-darken-2">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank" class="blue-text text-darken-2">TemplateFlip</a></div>
+        <ul class="mdl-mini-footer__link-list blue-text text-darken-2">
+          <li><a href="#">Privacy & Terms</a></li>
+        </ul>
+      </div>
+    </footer>
   </main>
 
 </div>
@@ -84,10 +150,18 @@
 
     background-color: rgba(0,0,0,0);
   }
+  .mdl-layout__content {
+    padding: 50px;
+    padding-top: 20px
+  }
 </style>
 
 <script>
     $(document).ready(function(){
         $('.slider').slider();
     });
+    $(document).ready(function(){
+        $('.collapsible').collapsible();
+    });
+
 </script>
