--- a/app/views/home/template1.html.erb
+++ b/app/views/home/template1.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp">
+  <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2">
     <i class="material-icons">mail</i>
   </a>
 
@@ -36,7 +36,7 @@
       </nav>
     </div>
   </header>
-  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+  <div class="mdl-layout__drawer">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
       <a class="mdl-navigation__link" href="/home/template1">Home</a>
       <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -57,38 +57,13 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio3.jpg') %>
-                </li>
-                <!--<li><div class="mdl-card__title">-->
-                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
-                <!--</div>-->
-                  <!--<div class="mdl-card__supporting-text">-->
-                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
-                  <!--</div><br>-->
-                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
-                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
-                  <!--</div>-->
-                <!--</li>-->
-              </ul>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="slider">
-              <ul class="slides">
-                <li>
-                  <%= image_tag('portfolio3.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio4.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio5.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <!--<li><div class="mdl-card__title">-->
                   <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
@@ -107,38 +82,13 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio5.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio6.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio7.jpg') %>
-                </li>
-                <!--<li><div class="mdl-card__title">-->
-                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
-                <!--</div>-->
-                  <!--<div class="mdl-card__supporting-text">-->
-                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
-                  <!--</div><br>-->
-                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
-                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
-                  <!--</div>-->
-                <!--</li>-->
-              </ul>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="slider">
-              <ul class="slides">
-                <li>
-                  <%= image_tag('portfolio7.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio8.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio9.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <!--<li><div class="mdl-card__title">-->
                   <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
@@ -157,38 +107,13 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio8.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio6.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio4.jpg') %>
-                </li>
-                <!--<li><div class="mdl-card__title">-->
-                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
-                <!--</div>-->
-                  <!--<div class="mdl-card__supporting-text">-->
-                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
-                  <!--</div><br>-->
-                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
-                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
-                  <!--</div>-->
-                <!--</li>-->
-              </ul>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="slider">
-              <ul class="slides">
-                <li>
-                  <%= image_tag('portfolio5.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio3.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <!--<li><div class="mdl-card__title">-->
                   <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
@@ -207,38 +132,13 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio4.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio7.jpg') %>
-                </li>
-                <!--<li><div class="mdl-card__title">-->
-                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
-                <!--</div>-->
-                  <!--<div class="mdl-card__supporting-text">-->
-                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
-                  <!--</div><br>-->
-                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
-                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
-                  <!--</div>-->
-                <!--</li>-->
-              </ul>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-            <div class="slider">
-              <ul class="slides">
-                <li>
-                  <%= image_tag('portfolio8.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio4.jpg') %>
-                </li>
-                <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <!--<li><div class="mdl-card__title">-->
                   <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
@@ -257,13 +157,113 @@
             <div class="slider">
               <ul class="slides">
                 <li>
-                  <%= image_tag('portfolio3.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio1.jpg') %>
+                  <%= image_tag('#') %>
                 </li>
                 <li>
-                  <%= image_tag('portfolio2.jpg') %>
+                  <%= image_tag('#') %>
+                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
+              </ul>
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="slider">
+              <ul class="slides">
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
+              </ul>
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="slider">
+              <ul class="slides">
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
+              </ul>
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="slider">
+              <ul class="slides">
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <!--<li><div class="mdl-card__title">-->
+                  <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
+                <!--</div>-->
+                  <!--<div class="mdl-card__supporting-text">-->
+                    <!--Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..-->
+                  <!--</div><br>-->
+                  <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
+                    <!--<%= link_to "Learn More", controller: "home", action: "template2" %>-->
+                  <!--</div>-->
+                <!--</li>-->
+              </ul>
+            </div>
+          </div>
+          <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            <div class="slider">
+              <ul class="slides">
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
+                </li>
+                <li>
+                  <%= image_tag('#') %>
                 </li>
                 <!--<li><div class="mdl-card__title">-->
                   <!--<h2 class="mdl-card__title-text">City Scape</h2>-->
@@ -279,12 +279,21 @@
             </div>
           </div>
         </div>
+        <ul class="pagination center-align">
+          <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+          <li class="active blue-text text-darken-2 blue lighten-1"><a href="#!">1</a></li>
+          <li class="waves-effect"><a href="#!">2</a></li>
+          <li class="waves-effect"><a href="#!">3</a></li>
+          <li class="waves-effect"><a href="#!">4</a></li>
+          <li class="waves-effect"><a href="#!">5</a></li>
+          <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+        </ul>
       </div>
     </div>
-    <footer class="mdl-mini-footer">
-      <div class="footer-container">
-        <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        <ul class="mdl-mini-footer__link-list">
+    <footer class="mdl-mini-footer blue-text text-darken-2 white">
+      <div class="footer-container blue-text text-darken-2">
+        <div class="mdl-logo blue-text text-darken-2">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank" class="blue-text text-darken-2">TemplateFlip</a></div>
+        <ul class="mdl-mini-footer__link-list blue-text text-darken-2">
           <li><a href="#">Privacy & Terms</a></li>
         </ul>
       </div>
