--- a/app/views/home/template4.html.erb
+++ b/app/views/home/template4.html.erb
@@ -1,4 +1,4 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2"><i class="material-icons">mail</i></a>
 
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
     <div class="mdl-layout__header-row site-logo-row">
@@ -21,7 +21,7 @@
       </nav>
     </div>
   </header>
-  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+  <div class="mdl-layout__drawer ">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
       <a class="mdl-navigation__link" href="/home/template1">Home</a>
       <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -60,19 +60,13 @@
           <div class="mdl-card mdl-cell mdl-cell--7-col-desktop mdl-cell--5-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp">
             <div class="row center-align">
               <form class="col s12">
-                <!--<div class="row">-->
-                  <!--<div class="input-field col s6">-->
-                    <!--<input id="input_text" type="text" data-length="10">-->
-                    <!--<label for="input_text">Input text</label>-->
-                  <!--</div>-->
-                <!--</div>-->
                 <div class="row valign-wrapper">
                   <div class="input-field col s12">
                     <textarea id="textarea1" class="materialize-textarea" data-length="120"></textarea>
                     <label for="textarea1">Course 1</label>
                   </div>
                   <div class="fixed-action-btn horizontal">
-                    <a class="btn-floating btn-tiny right">
+                    <a class="btn-floating btn-tiny right blue lighten-2">
                       <i class="small material-icons">mode_edit</i>
                     </a>
                     <ul>
@@ -87,7 +81,7 @@
                     <label for="textarea1">Course 2</label>
                   </div>
                   <div class="fixed-action-btn horizontal">
-                    <a class="btn-floating btn-tiny right">
+                    <a class="btn-floating btn-tiny right blue lighten-2">
                       <i class="small material-icons">mode_edit</i>
                     </a>
                     <ul>
@@ -103,7 +97,7 @@
                     <label for="textarea1">Course 3</label>
                   </div>
                   <div class="fixed-action-btn horizontal">
-                    <a class="btn-floating btn-tiny right">
+                    <a class="btn-floating btn-tiny right blue lighten-2">
                       <i class="small material-icons">mode_edit</i>
                     </a>
                     <ul>
@@ -119,7 +113,7 @@
                     <label for="textarea1">Course 4</label>
                   </div>
                   <div class="fixed-action-btn horizontal">
-                    <a class="btn-floating btn-tiny right">
+                    <a class="btn-floating btn-tiny right blue lighten-2">
                       <i class="small material-icons">mode_edit</i>
                     </a>
                     <ul>
@@ -135,7 +129,7 @@
                     <label for="textarea1">Course 5</label>
                   </div>
                   <div class="fixed-action-btn horizontal">
-                    <a class="btn-floating btn-tiny right">
+                    <a class="btn-floating btn-tiny right blue lighten-2">
                       <i class="small material-icons">mode_edit</i>
                     </a>
                     <ul>
@@ -151,7 +145,7 @@
                     <label for="textarea1">Course 6</label>
                   </div>
                   <div class="fixed-action-btn horizontal">
-                    <a class="btn-floating btn-tiny right">
+                    <a class="btn-floating btn-tiny right blue lighten-2">
                       <i class="small material-icons">mode_edit</i>
                     </a>
                     <ul>
@@ -161,7 +155,7 @@
                   </div>
 
                 </div>
-                <a class="btn-floating btn-small waves-effect waves-light "><i class="material-icons">add</i></a>
+                <a class="btn-floating btn-small waves-effect waves-light blue lighten-2"><i class="material-icons">add</i></a>
 
               </form>
             </div>
@@ -186,15 +180,15 @@
 
 
         <section class="section--center mdl-grid site-max-width homepage-portfolio">
-          <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio.html">Push your hang-out course</a>
+          <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent blue lighten-2" href="portfolio.html">Push your hang-out course</a>
         </section>
 
         </div>
     </div>
-    <footer class="mdl-mini-footer">
-      <div class="footer-container">
-        <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        <ul class="mdl-mini-footer__link-list">
+    <footer class="mdl-mini-footer blue-text text-darken-2 white">
+      <div class="footer-container blue-text text-darken-2">
+        <div class="mdl-logo blue-text text-darken-2">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank" class="blue-text text-darken-2">TemplateFlip</a></div>
+        <ul class="mdl-mini-footer__link-list blue-text text-darken-2">
           <li><a href="#">Privacy & Terms</a></li>
         </ul>
       </div>
@@ -205,88 +199,6 @@
 
 <style>
 
-  /*.mdl-cell--3-col, .mdl-cell--3-col-desktop.mdl-cell--3-col-desktop {*/
-    /*width: calc(50% - 16px);*/
-
-  /*}*/
-  /*.mdl-cell--9-col, .mdl-cell--9-col-desktop.mdl-cell--9-col-desktop {*/
-    /*width: calc(50% - 16px);*/
-    /*padding: 10px;*/
-  /*}*/
-  /*.mdl-color-text--white {*/
-    /*color: #000 !important;*/
-    /*padding: 10px;*/
-  /*}*/
-  /*.mdl-color--teal-100 {*/
-    /*background-color: rgba(255, 255, 255, 0.26) !important;*/
-  /*}*/
-  /*.mdl-color--teal-100 {*/
-     /*background-color: #ffffff !important;*/
-  /*}*/
-  /*.row .col.s3 {*/
-    /*width: 25%;*/
-    /*margin-left: auto;*/
-    /*left: auto;*/
-    /*right: auto;*/
-    /*box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);*/
-    /*background-color: white;*/
-    /*height: 200px;*/
-    /*text-align: center;*/
-    /*padding : 10px;*/
-  /*}*/
-  /*.row .col.s9 {*/
-    /*width: 75%;*/
-    /*margin-left: auto;*/
-    /*left: auto;*/
-    /*right: auto;*/
-    /*box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);*/
-    /*background-color: white;*/
-    /*height: 200px;*/
-    /*text-align: center;*/
-    /*padding : 10px;*/
-  /*}*/
-  /**, *:before, *:after {*/
-    /*box-sizing: inherit;*/
-    /*width: 100%;*/
-  /*}*/
-  /*h2 {*/
-    /*font-size: 3.56rem;*/
-    /*line-height: 110%;*/
-    /*margin: 1.78rem 0 1.424rem 0;*/
-    /*text-align: center;*/
-  /*}*/
-  /*.row .col.s6 {*/
-    /*width: 100%;*/
-    /*margin-left: auto;*/
-    /*left: auto;*/
-    /*right: auto;*/
-  /*}*/
-  /*.input-field {*/
-    /*position: relative;*/
-    /*margin-top: 0;*/
-  /*}*/
-  /*textarea.materialize-textarea {*/
-    /*overflow-y: hidden;*/
-    /*padding: 0;*/
-    /*resize: none;*/
-    /*min-height: 3rem;*/
-  /*}*/
-  /*h4 {*/
-    /*font-size: 2.28rem;*/
-    /*line-height: 110%;*/
-    /*margin: 1.14rem 0 .912rem 0;*/
-    /*text-align: center;*/
-  /*}*/
-  /*.container .row {*/
-     /*margin-left: 0px ;*/
-     /*margin-right: 0px ;*/
-  /*}*/
-  /*.row {*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    /*margin-bottom: 20px;*/
-    /*margin-top: 20px;*/
-  /*}*/
 
   .fixed-action-btn {
     position: relative;
