--- a/app/views/home/template5.html.erb
+++ b/app/views/home/template5.html.erb
@@ -1,4 +1,4 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp"><i class="material-icons">mail</i></a>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"><a href="contact.html" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2"><i class="material-icons">mail</i></a>
 
   <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
     <div class="mdl-layout__header-row site-logo-row">
@@ -21,7 +21,7 @@
       </nav>
     </div>
   </header>
-  <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+  <div class="mdl-layout__drawer ">
     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
       <a class="mdl-navigation__link" href="/home/template1">Home</a>
       <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
@@ -57,12 +57,6 @@
             </div>
           </form>
 
-            <!--<div class="row">-->
-              <!--<div class="input-field col s12">-->
-                <!--<input disabled value="I am not editable" id="disabled" type="text" class="validate">-->
-                <!--<label for="disabled">Disabled</label>-->
-              <!--</div>-->
-            <!--</div>-->
             <div class="row">
               <div class="input-field col s12">
                 <input id="password" type="password" class="validate">
@@ -75,15 +69,7 @@
                 <label for="email">Email</label>
               </div>
             </div>
-            <!--<div class="row">-->
-              <!--<div class="col s12">-->
-                <!--This is an inline input field:-->
-                <!--<div class="input-field inline">-->
-                  <!--<input id="email" type="email" class="validate">-->
-                  <!--<label for="email" data-error="wrong" data-success="right">Email</label>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
+
             <div class="row">
               <div class="input-field col s6">
                 <i class="material-icons prefix">phone</i>
@@ -110,13 +96,13 @@
             <div class="input-field col s12">
               <input type="date" class="datepicker">
               <form action="#">
-                <div class="file-field input-field">
-                  <div class="btn">
+                <div class="file-field input-field ">
+                  <div class="btn blue lighten-2">
                     <span>File</span>
                     <input type="file">
                   </div>
-                  <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
+                  <div class="file-path-wrapper ">
+                    <input class="file-path validate " type="text">
                   </div>
                 </div>
               </form>
@@ -132,18 +118,16 @@
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
       </div>
     </div>
-
+    <footer class="mdl-mini-footer blue-text text-darken-2 white">
+      <div class="footer-container blue-text text-darken-2">
+        <div class="mdl-logo blue-text text-darken-2">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank" class="blue-text text-darken-2">TemplateFlip</a></div>
+        <ul class="mdl-mini-footer__link-list blue-text text-darken-2">
+          <li><a href="#">Privacy & Terms</a></li>
+        </ul>
+      </div>
+    </footer>
   </main>
 </div>
 
